--- a/src/app/components/calendar/calendar.component.scss
+++ b/src/app/components/calendar/calendar.component.scss
@@ -38,3 +38,13 @@ $custom-calendar-theme: calendar-theme(
 .form-field{
     text-align:right;
 }
+
+.opinion-day{
+    text-align:center; 
+    color:white;  
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
