--- a/src/app/components/routine-generated/routine-generated.component.html
+++ b/src/app/components/routine-generated/routine-generated.component.html
@@ -21,7 +21,7 @@
             <div ngbDropdown class="d-inline-block">
               <div style="color:rgb(255, 255, 255); text-transform:uppercase; height:4rem; text-align: center;"
                 *ngIf="!isVisible()">
-                <h3>Debe ingresar el nombre de la rutina, ingresar el dia de la semana, duracion y seleccionar al menos
+                <h3>Debe ingresar el nombre de la rutina, ingresar el día de la semana, duración y seleccionar al menos
                   un ejercicio.</h3>
               </div>
               <h2 class="display-3 " style="color:rgb(252, 252, 252); font-size:15px; text-align:center;">
@@ -54,7 +54,7 @@
                 </mat-form-field>
               </h2>
               <div style="text-transform:uppercase; height:5rem; text-align: center;" *ngIf="isVisible()">
-                <a href="javascript:void(0)" (click)="createRoutine(classic3)" class="btn btn-success mt-0">
+                <a href="javascript:void(0)" (click)="createRoutine(classic3)" id="startRoutine" class="btn btn-success mt-0">
                   Iniciar Rutina
                 </a>
               </div>
@@ -79,7 +79,7 @@
             <div class="modal-body">
               <div class="py-3 text-center">
                 <i class="ni ni-like-2 ni-3x"></i>
-                <h4 class="heading mt-4">Su rutina se genero correctamente!</h4>
+                <h4 class="heading mt-4">Su rutina se generó correctamente!</h4>
                 <p>Usted a iniciado la rutina: {{ nameNewRoutine }}, puede acceder a ella desde Ver mis rutinas.</p>
               </div>
             </div>
@@ -98,10 +98,10 @@
               </app-exercise-information-card>
                 <mat-form-field appearance="outline">
                   <mat-label style="color:rgb(255, 255, 255) !important;">
-                    Seleccione dia de ejercicio
+                    Seleccione día de ejercicio
                   </mat-label>
                   <mat-select (selectionChange)="selectDayExercise($event, dat)"  name="selectedDays">
-                    <mat-option *ngFor="let dia of diasEjercicios" [value]="dia"> Dia {{ dia }}</mat-option>
+                    <mat-option *ngFor="let dia of diasEjercicios" [value]="dia"> Día {{ dia }}</mat-option>
                   </mat-select>
                 </mat-form-field>
             </div>
