--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,40 +1,25 @@
 <main>
-  <div class="position-relative">
-    <!-- Hero for FREE version -->
-    <section class="section section-lg section-hero section-shaped">
-      <!-- Background circles -->
-      <div class="shape shape-style-1 shape-primary">
-        <span class="span-150"></span>
-        <span class="span-50"></span>
-        <span class="span-50"></span>
-        <span class="span-75"></span>
-        <span class="span-100"></span>
-        <span class="span-75"></span>
-        <span class="span-50"></span>
-        <span class="span-100"></span>
-        <span class="span-50"></span>
-        <span class="span-100"></span>
-      </div>
-      <div class="container shape-container d-flex align-items-center py-lg">
-        <div class="col px-0">
-          <div class="row align-items-center justify-content-center">
-            <div class="col-lg-6 text-center">
-              <img src="./assets/img/brand/calisapp2.png" style="width: 300px;" class="img-fluid">
-              <p class="lead text-white">Guía de calistenia, para organizar y planificar tus entrenamientos.</p>
-              <div class="mt-5">
-                <small class="text-white font-weight-bold mb-0 mr-2">*proudly coded by</small>
-                <img src="./assets/img/brand/calisapp2.png" style="height: 28px;">
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- SVG separator -->
-      <div class="separator separator-bottom separator-skew zindex-100">
-        <svg x="0" y="0" viewBox="0 0 2560 100" preserveAspectRatio="none" version="1.1" xmlns="http://www.w3.org/2000/svg">
-          <polygon class="fill-white" points="2560 0 2560 100 0 100"></polygon>
-        </svg>
-      </div>
-    </section>
+ <div class="position-relative">
+      <section>
+        <video id="video" src="../../../assets/video/smoke3.mp4" autoplay muted loop></video>
+        <h1>
+          <span><b>C</b></span>
+          <span><b>a</b></span>
+          <span><b>l</b></span>
+          <span><b>i</b></span>
+          <span><b>s</b></span>
+          <span><b>a</b></span>
+          <span><b>p</b></span>
+          <span><b>p</b></span>
+      
+          <h2>
+            <span class="lead">Guía de calistenia, para organizar y planificar tus entrenamientos</span>
+          </h2>
+        </h1>
+      </section>
   </div>
+
+  <script type="text/javascript">
+    document.querySelector('video').playbackRate = 0.5;
+  </script>
 </main>
