--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,7 +1,9 @@
 <nav id="navbar-main"
   class="navbar navbar-main navbar-expand-lg navbar-transparent navbar-light headroom headroom--top headroom--pinned">
   <div class="container">
-    <a class="navbar-brand mr-lg-5" [routerLink]="['/home']">
+    <a class="navbar-brand mr-lg-5" [routerLink]="['/home']" *ngIf="!userLogued()">
+      <img src="./assets/img/brand/calisapp3.png" ></a>
+      <a class="navbar-brand mr-lg-5" [routerLink]="['/welcome']" *ngIf="userLogued()">
       <img src="./assets/img/brand/calisapp2.png"></a>
     <button class="navbar-toggler" type="button" (click)="isCollapsed = !isCollapsed"
       [attr.aria-expanded]="!isCollapsed" aria-controls="navbar_global">
