--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,9 +1,9 @@
 <nav id="navbar-main"
-  class="navbar navbar-main navbar-expand-lg navbar-transparent navbar-light headroom headroom--top headroom--pinned">
+  class="navbar navbar-main fixed-top navbar-expand-lg navbar-transparent navbar-light">
   <div class="container">
     <a class="navbar-brand mr-lg-5" [routerLink]="['/home']" *ngIf="!userLogued()">
-      <img src="./assets/img/brand/calisapp3.png" ></a>
-      <a class="navbar-brand mr-lg-5" [routerLink]="['/welcome']" *ngIf="userLogued()">
+      <img src="./assets/img/brand/calisapp3.png"></a>
+    <a class="navbar-brand mr-lg-5" [routerLink]="['/welcome']" *ngIf="userLogued()">
       <img src="./assets/img/brand/calisapp2.png"></a>
     <button class="navbar-toggler" type="button" (click)="isCollapsed = !isCollapsed"
       [attr.aria-expanded]="!isCollapsed" aria-controls="navbar_global">
@@ -15,15 +15,35 @@
         <li class="nav-item dropdown" *ngIf="userLogued()">
           <a class="nav-link no-caret" id="activityUser" data-toggle="dropdown" role="button">
             <i class="ni ni-collection d-lg-none"></i>
-            <span class="nav-link-inner--text">Actividades Usuario
-            </span>
+            <span class="nav-link-inner--text">Actividades Usuario</span>
           </a>
           <div class="dropdown-menu">
-            <a [routerLink]="['/myRoutine']" id="myRoutine" class="dropdown-item">Mis Rutinas</a>
-            <a [routerLink]="['/routine']" id="routineByLevel" class="dropdown-item">Generar rutina segun tu nivel</a>
-            <a [routerLink]="['/routineGenerated']" id="routinePersonalized" class="dropdown-item">Generar rutina personalizada</a>
-            <a [routerLink]="['/user-profile']" id="profile" class="dropdown-item">Perfil</a>
-            <a [routerLink]="['/calendar']" id="calendar" class="dropdown-item">Calendario</a>
+            <ul>
+              <li>
+                <i class="fa fa-calendar-check-o" aria-hidden="true"></i>
+                <a [routerLink]="['/myRoutine']" id="myRoutine" class="dropdown-item">Mis Rutinas</a>
+              </li>
+              <li>
+                <i class="fa fa-calendar-o" aria-hidden="true"></i>           
+                <a [routerLink]="['/routine']" id="routineByLevel" class="dropdown-item">Rutina por nivel</a>
+              </li>
+              <li>
+                <i class="fa fa-calendar-o" aria-hidden="true"></i>  
+                <a [routerLink]="['/routineGenerated']" id="routinePersonalized" class="dropdown-item">Rutina personalizada</a>
+              </li>
+              <li>
+                <i class="fa fa-user" aria-hidden="true"></i>
+                <a [routerLink]="['/user-profile']" id="profile" class="dropdown-item">Perfil</a>
+              </li>
+              <li>
+                <i class="fa fa-calendar" aria-hidden="true"></i>
+                <a [routerLink]="['/calendar']" id="calendar" class="dropdown-item">Calendario</a>
+              </li>
+              <li>
+                <i class="fa fa-sign-out" aria-hidden="true"></i>
+                <a [routerLink]="['/login']" id="logout" class="dropdown-item" (click)="logout()" *ngIf="userLogued()">Cerrar sesión</a>
+              </li>  
+            </ul>
           </div>
         </li>
         <li class="nav-item dropdown" *ngIf="!userLogued()">
@@ -38,8 +58,7 @@
                   <i class="ni ni-lock-circle-open"></i>
                 </div>
                 <div class="media-body ml-3">
-                  <h6 class="heading text-primary mb-md-1" style="font-size:100%; text-transform: initial;">Iniciar sesión</h6>
-                  
+                  <span class="heading text-primary mb-md-1">Iniciar sesión</span>        
                 </div>
               </a>
               <a routerLinkActive="active" [routerLink]="['/register']" id="registerLink" class="media d-flex align-items-center">
@@ -47,31 +66,12 @@
                   <i class="ni ni-single-02"></i>
                 </div>
                 <div class="media-body ml-3">
-                  <h6 class="heading text-primary mb-md-1" style="font-size:100%; text-transform: initial;">Registrarse</h6>
+                  <span class="heading text-primary mb-md-1">Registrarse</span>
                 </div>
               </a>
             </div>
           </div>
-        </li>
-        <li class="nav-item dropdown" *ngIf="userLogued()">
-          <a class="nav-link no-caret" data-toggle="dropdown" id="logout" role="button">
-            <i class="ni ni-ui-04 d-lg-none"></i>
-            <span class="nav-link-inner--text">Salir</span>
-          </a>
-          <div class="dropdown-menu-xl dropdown-menu">
-            <div class="dropdown-menu-inner">
-              <a routerLinkActive="active" [routerLink]="['/login']" id="outButton" class="media d-flex align-items-center"
-                (click)="logout()">
-                <div class="icon icon-shape bg-gradient-primary rounded-circle text-white">
-                  <i class="ni ni-lock-circle-open"></i>
-                </div>
-                <div class="media-body ml-3">
-                  <h6 class="heading text-primary mb-md-1">Salir</h6>
-                </div>
-              </a>
-            </div>
-          </div>
-        </li>
+       </li>
       </ul>
     </div>
   </div>
