--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,17 +1,28 @@
-<footer class="footer" [ngClass]="{'has-cards': getPath()!=='/user-profile' && getPath()!=='/register' && getPath()!=='/login'}" *ngIf="userLogued()">
+<footer class="footer" *ngIf="userLogued()">
   <div class="container">
-    <div class="row align-items-center justify-content-md-between">
-      <div class="col-md-6">
-        <div class="copyright">
-          &copy; {{test | date: 'yyyy'}}
-        </div>
+    <div class="row align-items-center text-center">
+      <div class="copyright col-md-4">
+          Copyright &copy; {{test | date: 'yyyy'}}
       </div>
-      <div class="col-md-6">
-        <ul class="nav nav-footer justify-content-end">
-          <li class="nav-item">
-            <a href="https://github.com/CesarPZ/Calisapp-front-end/blob/main/LICENSE" class="nav-link" target="_blank">MIT License</a>
+
+      <div class="glass-social col-md-4">
+        <ul>
+          <li>
+            <a href="https://www.facebook.com/" class="facebook" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+          </li>
+          <li>
+            <a href="https://twitter.com/" class="twitter" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+          </li>
+          <li>
+            <a href="https://www.instagram.com/" class="instagram" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
           </li>
         </ul>
+      </div>
+
+      <div class="license col-md-4">
+          <div>
+            <a href="https://github.com/CesarPZ/Calisapp-front-end/blob/main/LICENSE" target="_blank">MIT License</a>
+          </div>
       </div>
     </div>
   </div>
