--- a/src/app/components/reusableComponent/level-card/level-card.component.css
+++ b/src/app/components/reusableComponent/level-card/level-card.component.css
@@ -1,1 +1,109 @@
 @import "~bootstrap-icons/font/bootstrap-icons.css";
+
+.card {
+    margin-top: 20px;
+    border-radius: 10px;
+}
+
+.card-body::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+}
+
+.card-body::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    filter: blur(10px);
+    border-radius: 10px;
+}
+
+.color-beginner::before, 
+.color-beginner::after {
+    background: linear-gradient(315deg, #ffbc00, #fbff00); 
+}
+
+.color-intermediate::before, 
+.color-intermediate::after {
+    background: linear-gradient(315deg, #ff6600, #ffbc00); 
+}
+
+.color-advanced::before, 
+.color-advanced::after {
+    background: linear-gradient(315deg, #ff5e00, #b700ff);
+}
+
+.card-body .row span {
+    position: absolute;
+    top: 6px;
+    left: 6px;
+    right: 6px;
+    bottom: 6px;
+    background: rgba(0,0,0,0.2);
+    z-index: 2;
+    border-radius: 10px;
+}
+
+.card-body .row span::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 50%;
+    height: 100%;
+    background: rgba(255,255,255,0.1);
+    pointer-events: none;
+    border-radius: 10px;
+}
+
+.card .row .content {
+    position: relative;
+    z-index: 10;
+    padding: 0px 20px;
+}
+
+.card .row .content h6 {
+    font-size: 28px;
+    color: #fff !important;
+    font-weight: 500;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    justify-items: auto;
+}
+
+.card .row .content p {
+    font-size: 1.1em;
+    color: #fff;
+    margin-bottom: 10px;
+}
+
+.card .row .content a {
+    width: 110px; 
+    margin-left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.icon {
+    width: 80px;
+    height: 80px;
+    position: absolute;
+    background-color: #fff;
+    top: -35%;
+    left: calc(50% - 40px);
+    border: 6px solid;
+}
+
+.icon i {
+    font-size: 2rem;
+}
