--- a/src/app/components/reusableComponent/level-card/level-card.component.html
+++ b/src/app/components/reusableComponent/level-card/level-card.component.html
@@ -1,14 +1,19 @@
 <div class="card card-lift--hover shadow border-0">
-  <div class="card-body py-5">
+  <div class="card-body py-5 color-{{colorBackground}}">
     <div class="row row-grid">
-      <div class="icon icon-shape icon-shape-{{colorCard}} rounded-circle mb-2">
-        <i class="{{icon}}"></i>
-      </div> 
-      <div style="vertical-align: middle;  display: flex;  align-items: center;">
-        <h6 class="text-{{colorCard}}" style="font-size: 17px;"> &nbsp; &nbsp;{{ nivelName }} </h6>
-      </div> 
+      <span></span>
+      <div class="content"> 
+        <div class="icon icon-shape icon-shape-{{colorCard}} rounded-circle mb-2">
+            <i class="{{icon}}"></i>
+        </div> 
+        <div>
+          <h6 class="text-{{colorCard}}">{{ nivelName }}</h6>
+        </div> 
+        <p class="description mt-3"> {{ description }} </p>
+        <div class="test-center">
+          <a href="javascript:void(0)" (click)="getRoutinesWithLevel()" class="btn btn-{{colorCard}} mt-4">Ver Rutinas</a>
+        </div>  
+      </div>
     </div>
-    <p class="description mt-3"> {{ description }} </p>
-    <a href="javascript:void(0)" (click)="getRoutinesWithLevel()" class="btn btn-{{colorCard}} mt-4">Ver Rutinas</a>
   </div>
 </div>
