--- a/src/app/components/routine/routine.component.css
+++ b/src/app/components/routine/routine.component.css
@@ -1,21 +1,78 @@
 @import "~bootstrap-icons/font/bootstrap-icons.css";
 
-.card-transparent{
-    background:transparent;
-    border:3px solid rgb(23, 0, 107) !important;
-    width:15rem; 
-    height:15rem;
+.card-transparent {
+    background: transparent;
+    border: 3px solid rgb(23, 0, 107) !important;
+    width: 15rem; 
+    height: 15rem;
 }
 
-.content-transparent{
-    background:transparent;
+.content-transparent {
+    background: transparent;
     background-color: rgba(255,255,255,0.2);
     font-weight: bolder;
 }
 
-.content-transparent-avanzado{
-    background:transparent;
+.content-transparent-avanzado {
+    background: transparent;
     background-color: rgb(252, 252, 252);
-    border:2px solid rgb(236, 236, 236) !important;
+    border: 2px solid rgb(236, 236, 236) !important;
     font-weight: bolder;
+    border-radius: 10px;
+}
+
+.title {
+    color: #fff; 
+    margin-top: 20px; 
+    font-size: 25px; 
+    text-align: center; 
+    font-weight: bolder;
+}
+
+.levelRoutines {
+    height: 3.5rem; 
+    text-align: center; 
+    color: rgb(12, 119, 219);
+    font-weight: bolder; 
+    font-size: 25px;
+    margin-top: -20px;
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.accordion-padding {
+    padding-left: 0px;
+}
+
+.col {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.number-weeks {
+    font-size: 15px; 
+    text-align: left;
+}
+
+.mat-form-field {
+    width: 100%;
+}
+
+.startRoutine-button {
+    text-transform: uppercase; 
+    height: 5rem; 
+    text-align: center;
+}
+
+.modal-footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.wrapper {
+    margin-bottom: 120px;
 }
