--- a/src/app/components/routine/routine.component.html
+++ b/src/app/components/routine/routine.component.html
@@ -33,8 +33,8 @@
           <div class="row row-grid">
             <div class="col-lg-4">
               <app-level-card [nivelName]="'Nivel Principiante'"
-                              [description]="'Para personas que inician este sistema de 
-                                entrenamiento. Rutinas con ejercicios simples donde trabajaras 
+                              [description]="'Para personas que inician en este sistema de 
+                                entrenamiento. Rutinas con ejercicios simples donde trabajarás 
                                 tus músculos principales.'"
                               [icon]="'bi bi-award-fill'"  
                               [colorCard]="'primary'"
@@ -58,8 +58,8 @@
             <div class="col-lg-4">
               <app-level-card [nivelName]="'Nivel Avanzado'"
                               [description]="'Rutinas con ejercicios complejos, donde 
-                                potenciaras tus grupos musculares. Para personas con gran 
-                                experiencia en calistenia, fuerza y control corporal.'"
+                                potenciarás tus grupos musculares. Para personas con gran 
+                                control corporal y experiencia.'"
                               [icon]="'ni ni-diamond'"
                               [colorCard]="'warning'"
                               [level]="'3'"
