--- a/src/app/components/my-routine/my-routine.component.css
+++ b/src/app/components/my-routine/my-routine.component.css
@@ -2,7 +2,7 @@
 
 .card-transparent{
     background:transparent;
-    border:4px solid rgb(255, 255, 255) !important;
+    border:3px solid #555 !important;
     width:15rem; 
     height:15rem;
 }
