--- a/src/app/components/reusableComponent/exercise-information-card/exercise-information-card.component.css
+++ b/src/app/components/reusableComponent/exercise-information-card/exercise-information-card.component.css
@@ -1,41 +1,53 @@
 @import "~bootstrap-icons/font/bootstrap-icons.css";
 
-.card-style{
-    text-transform:uppercase; 
+.card-header {
+    text-transform: uppercase; 
     text-align: center; 
-    color: colorStyle; 
-    font-weight:bolder; 
-    font-size:17px; height:3.5rem;
-}
-
-section {
-    display: table;
-}
-
-.example-label {
-    display: table-cell;
-    font-size: 14px;
-    margin-left: 8px;
-    min-width: 120px;
-}
-
-.example-button-row {
-    display: table-cell;
-    width: 490px;
-}
-
-.example-button-row .mat-button-base {
-    margin: 8px 8px 8px 0;
-}
-
-.example-flex-container {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-}
-
-.example-button-container {
+    font-weight: bolder; 
+    font-size:17px; 
+    height:3.5rem;
     display: flex;
     justify-content: center;
-    width: 120px;
+    align-items: center;
+    color: black;
+}
+
+.card-body {
+    padding-right: 20px;
+    padding-left: 24px;
+    padding-top: 24px;
+    padding-bottom: 24px;
+} 
+
+.background-header {
+    background: linear-gradient(315deg, #fbff00, #ffbc00) !important;
+}
+
+.card-text {
+    align-items: center;
+    justify-content: center;
+    font-weight: 500;
+    height: 4.85rem;
+    color: black;
+}
+
+.card-text a {
+    text-decoration: none !important;
+    color: #d95652;
+}
+
+.card-text a:hover {
+    text-decoration: none !important;
+    color: #b53e3a;
+}
+
+.background-card {
+    background-color: rgb(243, 247, 250);
+    height: 100%;
+}
+
+.title-video {
+    text-transform:uppercase; 
+    font-weight: bold; 
+    font-size: 20px;
 }
