--- a/src/app/components/routine-generated/routine-generated.component.css
+++ b/src/app/components/routine-generated/routine-generated.component.css
@@ -2,14 +2,19 @@
 
 .card-transparent{
     background:transparent;
-    border:4px solid rgb(255, 255, 255) !important;
+    border:4px solid #555 !important;
     width:14rem; 
     height:18rem;
 }
 
 .card-success {
     background:transparent;
-    border:6px solid rgb(0, 168, 76) !important;
+    border:4px solid rgb(0, 168, 76) !important;
     width:14rem; 
     height:18rem;
+}
+
+.card {
+    background-color: rgb(243, 247, 250) !important;
+    height:22rem;
 }
